<resources>
    <string name="app_name">MDetect</string>
    <string name="mdetect">MDetect</string>
    <string name="sign_up">Sign Up</string>

    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="update">Update Profile</string>
    <string name="full_name">Full Name</string>
    <string name="log_in">Login</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="login_successful">Login Successful</string>
    <string name="enter_your_twitter_username_below">Enter your Twitter username below</string>
    <string name="so_we_can_get_access_to_your_timeline">so we can get access to your timeline</string>
    <string name="twitter_user_timeline">Twitter User Timeline</string>
    <string name="twitter_username">Twitter Username</string>
    <string name="see_your_mood">See Your Mood</string>
    <string name="get_timeline">Get Timeline</string>
    <string name="twitter_activity">Twitter Activity</string>
    <string name="current_mood">Current Mood</string>
    <string name="continue_activity">Continue</string>
    <string name="mental_health_resources">Mental Health Resources</string>
    <string name="resources_desc">Don\'t be afraid to ask for help!</string>
    <string name="line_one">These sites have a wide range of resources\nto help you take care of yourself.</string>
    <string name="line_two">From people to talk to, to breathing\nexercises.</string>
    <string name="line_three">And there are coder specific resources.\nHow cool is that!?</string>
    <string name="line_four">You can find them <a href="https://checkpointorg.com/">here</a> and <a href="https://www.takethis.org/">here</a></string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
</resources>