<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/memegr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/heavy"
        android:text="@string/mdetect"
        android:textColor="@color/grey"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/logi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/light"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"
        android:textColor="@color/grey"
        android:textSize="25sp"
        android:alpha="0.5"/>

    <EditText
        android:id="@+id/emaili"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:ems="10"
        android:layout_below="@+id/logi"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/light"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:background="@drawable/input_field"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/passw"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:ems="10"
        android:fontFamily="@font/light"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/emaili"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:background="@drawable/input_field"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/loginb"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_below="@+id/passw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:textSize="16sp"
        android:fontFamily="@font/light"
        android:onClick="Log_in"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/light"
        android:onClick="Sign_up"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/grey"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/light"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginStart="5dp"
        android:onClick="Sign_up"
        android:text="@string/sign_up"
        android:textColor="@color/red"
        android:textSize="20sp" />

</RelativeLayout>