<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/heavy"
        android:text="@string/mdetect"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/wel_come"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/light"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:alpha="0.5"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:textSize="16sp"
        android:fontFamily="@font/light"
        android:onClick="Login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/light"
        android:onClick="Sign_up"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/light"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginStart="5dp"
        android:onClick="Sign_up"
        android:text="@string/sign_up"
        android:textColor="@color/red"
        android:textSize="20sp" />


</RelativeLayout>