<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwitterActivity">

    <TextView
        android:id="@+id/mdetec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/heavy"
        android:text="@string/mdetect"
        android:textColor="@color/grey"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/usertimeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/light"
        android:layout_centerHorizontal="true"
        android:text="@string/twitter_user_timeline"
        android:textColor="@color/grey"
        android:textSize="25sp"
        android:alpha="0.5"/>

    <TextView
        android:id="@+id/userTimelineDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/usertimeline"
        android:fontFamily="@font/light"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_your_twitter_username_below"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:alpha="0.5"/>

    <TextView
        android:id="@+id/timelineDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/userTimelineDesc"
        android:fontFamily="@font/light"
        android:layout_centerHorizontal="true"
        android:text="@string/so_we_can_get_access_to_your_timeline"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:alpha="0.5"/>

</RelativeLayout>